<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="wrap_content"
                                             android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/shape_circle_empty_stroke"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView4"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        android:layout_marginBottom="0dp"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="2dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"

        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/shape_rectangle"
        app:layout_constraintBottom_toBottomOf="@+id/textView24"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="@+id/imageView"
        app:layout_constraintRight_toRightOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.5"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/direct_header_label_npc"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintLeft_toRightOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/direct_header_label_npg"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintLeft_toLeftOf="@+id/textView4"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"/>

    <TextView
        android:id="@+id/textView18"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/shape_circle_stroke"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/letter_related"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@+id/textView4"
        app:layout_constraintRight_toLeftOf="@+id/textView20"
        app:layout_constraintTop_toBottomOf="@+id/textView5"/>

    <TextView
        android:id="@+id/textView20"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/shape_circle_stroke"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/letter_ditto"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/textView18"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView18"/>

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/label_related_group"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="@+id/imageView7"
        app:layout_constraintRight_toRightOf="@+id/textView18"
        app:layout_constraintTop_toBottomOf="@+id/textView18"/>

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/label_ditto_group"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="@+id/imageView10"
        app:layout_constraintRight_toRightOf="@+id/textView20"
        app:layout_constraintTop_toBottomOf="@+id/textView20"/>

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:tint="@color/genderless"
        app:layout_constraintBottom_toBottomOf="@+id/textView18"
        app:layout_constraintRight_toLeftOf="@+id/textView18"
        app:layout_constraintTop_toTopOf="@+id/textView18"
        app:srcCompat="@drawable/ic_gender_genderless"/>

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:tint="@color/ditto"
        app:layout_constraintBottom_toBottomOf="@+id/textView20"
        app:layout_constraintRight_toLeftOf="@+id/textView20"
        app:layout_constraintTop_toTopOf="@+id/textView20"
        app:srcCompat="@drawable/ic_gender_genderless"/>

    <TextView
        android:id="@+id/textView24"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="8dp"
        android:text="@string/direct_header_text_npc_lower"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/textView4"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView19"/>
</android.support.constraint.ConstraintLayout>