<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:orientation="vertical"
    android:paddingLeft="8dp"
    android:paddingRight="8dp">

    <TextView
        android:id="@+id/module_label"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center_horizontal"
        android:text="@string/label_ivs"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:id="@+id/separator"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:background="#25000000"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/module_label"/>

    <TextView
        android:id="@+id/label_hp"
        style="@style/SmallLabel"
        android:layout_width="32dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:gravity="center_horizontal"
        android:text="@string/label_hp"
        android:textIsSelectable="false"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/label_atk"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/separator"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"/>

    <TextView
        android:id="@+id/label_def"
        style="@style/SmallLabel"
        android:layout_width="32dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="sans-serif-light"
        android:gravity="center_horizontal"
        android:maxLines="1"
        android:text="@string/label_def"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/tertiary_text_light"
        android:textIsSelectable="false"
        android:textSize="12sp"
        app:layout_constraintLeft_toRightOf="@+id/label_atk"
        app:layout_constraintRight_toLeftOf="@+id/label_satk"
        app:layout_constraintTop_toTopOf="@+id/label_atk"
        android:layout_marginEnd="4dp"/>

    <TextView
        android:id="@+id/label_sdef"
        style="@style/SmallLabel"
        android:layout_width="32dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="sans-serif-light"
        android:gravity="center_horizontal"
        android:maxLines="1"
        android:text="@string/label_sdef"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/tertiary_text_light"
        android:textIsSelectable="false"
        android:textSize="12sp"
        app:layout_constraintLeft_toRightOf="@+id/label_satk"
        app:layout_constraintRight_toLeftOf="@+id/label_spd"
        app:layout_constraintTop_toTopOf="@+id/label_satk"
        android:layout_marginEnd="4dp"/>

    <TextView
        android:id="@+id/label_atk"
        style="@style/SmallLabel"
        android:layout_width="32dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/label_atk"
        android:textIsSelectable="false"
        app:layout_constraintLeft_toRightOf="@+id/label_hp"
        app:layout_constraintRight_toLeftOf="@+id/label_def"
        app:layout_constraintTop_toTopOf="@+id/label_hp"
        android:layout_marginEnd="4dp"/>

    <TextView
        android:id="@+id/label_spd"
        style="@style/SmallLabel"
        android:layout_width="32dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/label_spd"
        android:textIsSelectable="false"
        app:layout_constraintLeft_toRightOf="@+id/label_sdef"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/label_sdef"
        android:layout_marginEnd="8dp"/>

    <TextView
        android:id="@+id/label_satk"
        style="@style/SmallLabel"
        android:layout_width="32dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/label_satk"
        android:textIsSelectable="false"
        app:layout_constraintLeft_toRightOf="@+id/label_def"
        app:layout_constraintRight_toLeftOf="@+id/label_sdef"
        app:layout_constraintTop_toTopOf="@+id/label_def"
        android:layout_marginEnd="4dp"/>

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/pokemon_iv_hp"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:button="@drawable/ic_iv_circle"
        android:buttonTint="@color/iv_color_selector"
        android:stateListAnimator="@animator/lift_on_check"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintBottom_toBottomOf="@+id/pokemon_iv_atk"
        app:layout_constraintTop_toTopOf="@+id/pokemon_iv_atk"
        app:layout_constraintRight_toLeftOf="@+id/pokemon_iv_atk"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="4dp"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginStart="8dp"/>

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/pokemon_iv_atk"
        android:layout_width="32dp"
        android:layout_height="32dp"
        app:buttonTint="@color/iv_color_selector"
        android:button="@drawable/ic_iv_triangle"
        android:stateListAnimator="@animator/lift_on_check"
        app:layout_constraintBottom_toBottomOf="@+id/pokemon_iv_def"
        app:layout_constraintTop_toTopOf="@+id/pokemon_iv_def"
        app:layout_constraintRight_toLeftOf="@+id/pokemon_iv_def"
        app:layout_constraintLeft_toRightOf="@+id/pokemon_iv_hp"
        android:layout_marginEnd="4dp"
        app:layout_constraintVertical_bias="0.0"/>

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/pokemon_iv_def"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:button="@drawable/ic_iv_square"
        android:buttonTint="@color/iv_color_selector"
        android:stateListAnimator="@animator/lift_on_check"
        app:layout_constraintBottom_toBottomOf="@+id/pokemon_iv_satk"
        app:layout_constraintTop_toTopOf="@+id/pokemon_iv_satk"
        app:layout_constraintRight_toLeftOf="@+id/pokemon_iv_satk"
        app:layout_constraintLeft_toRightOf="@+id/pokemon_iv_atk"
        android:layout_marginEnd="4dp"
        app:layout_constraintVertical_bias="0.0"/>

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/pokemon_iv_satk"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:button="@drawable/ic_iv_heart"
        android:buttonTint="@color/iv_color_selector"
        android:stateListAnimator="@animator/lift_on_check"
        app:layout_constraintBottom_toBottomOf="@+id/pokemon_iv_sdef"
        app:layout_constraintTop_toTopOf="@+id/pokemon_iv_sdef"
        app:layout_constraintRight_toLeftOf="@+id/pokemon_iv_sdef"
        app:layout_constraintLeft_toRightOf="@+id/pokemon_iv_def"
        android:layout_marginEnd="4dp"
        app:layout_constraintVertical_bias="0.0"/>

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/pokemon_iv_sdef"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:button="@drawable/ic_iv_star"
        android:buttonTint="@color/iv_color_selector"
        android:stateListAnimator="@animator/lift_on_check"
        app:layout_constraintBottom_toBottomOf="@+id/pokemon_iv_spd"
        app:layout_constraintTop_toTopOf="@+id/pokemon_iv_spd"
        app:layout_constraintRight_toLeftOf="@+id/pokemon_iv_spd"
        app:layout_constraintLeft_toRightOf="@+id/pokemon_iv_satk"
        android:layout_marginEnd="4dp"
        app:layout_constraintVertical_bias="0.0"/>

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/pokemon_iv_spd"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:button="@drawable/ic_iv_diamond"
        android:buttonTint="@color/iv_color_selector"
        android:stateListAnimator="@animator/lift_on_check"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/pokemon_iv_sdef"
        android:layout_marginTop="-1dp"
        app:layout_constraintTop_toBottomOf="@+id/label_spd"
        android:layout_marginEnd="8dp"/>


</android.support.constraint.ConstraintLayout>